--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
     "immer": "^8.0.1",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
